# NovaInfer

./: CMakeLists.txt  README.md  vcpkg.json
demo/: CMakeLists.txt
demo/unet/: unet_demo.cpp
include/: attribute.hpp  graph.hpp  inf_util.hpp  operand.hpp  operator.hpp  parameter.hpp  type.hpp
include/layer/: layer.hpp  layer_factory.hpp
include/layer/concrete/: cat.hpp  convolution.hpp  expression.hpp  flatten.hpp  input.hpp  linear.hpp  maxpooling.hpp  output.hpp  relu.hpp  sigmoid.hpp  softmax.hpp  transposed_convolution.hpp
include/layer/concrete/expression/: expression.hpp  parser.hpp
include/tensor/: tensor.hpp
source/: attribute.cpp  graph.cpp  inf_util.cpp  operand.cpp  operator.cpp
source/layer/: layer_factory.cpp
source/layer/concrete/: cat.cpp  convolution.cpp  expression.cpp  flatten.cpp  linear.cpp  maxpooling.cpp  relu.cpp  sigmoid.cpp  softmax.cpp  transposed_convolution.cpp
source/layer/concrete/expression/: expression.cpp  parser.cpp
source/pnnx/: ir.cpp  store_zip.cpp
test/: CMakeLists.txt  cat_test.cpp  convolution_test.cpp  flatten_test.cpp  linear_test.cpp  openmp_test.cpp  relu_test.cpp  sigmoid_test.cpp  softmax_test.cpp  tensor_test.cpp  test_convolution.cpp  test_flatten.cpp  test_linear.cpp  test_openmp.cpp  test_relu.cpp  test_sigmoid.cpp  test_softmax.cpp  test_tensor.cpp  test_transposed_convolution.cpp  transposed_convolution_test.cpp
